force-app/main/default/objects/CIHI_Code_and_Value__mdt/CIHI_Code_and_Value__mdt.object-meta.xml
<CustomObject>
    <label>CIHI Code and Value</label>
    <pluralLabel>CIHI Code and Values</pluralLabel>
</CustomObject>