force-app/main/default/objects/CIHI_Code_and_Value__mdt/fields/CIHI_Code__c.field-meta.xml
<CustomField>
    <fullName>CIHI_Code__c</fullName>
    <label>CIHI Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>