force-app/main/default/objects/CIHI_Code_and_Value__mdt/fields/CIHI_Value__c.field-meta.xml
<CustomField>
    <fullName>CIHI_Value__c</fullName>
    <label>CIHI Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>