force-app/main/default/objects/CIHI_Code_and_Value__mdt/fields/Main_CIHI_Field__c.field-meta.xml
<CustomField>
    <fullName>Main_CIHI_Field__c</fullName>
    <label>Main CIHI Field</label>
    <referenceTo>Main_CIHI_Fields__mdt</referenceTo>
    <relationshipLabel>CIHI Code and Values</relationshipLabel>
    <relationshipName>CIHI_Code_and_Values</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>